--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </select></label>
             <label><select name="housing_price" id="housing_price" class="tokyo__filter">
               <option value="any" selected>Любая</option>
-              <option value="middle" selected>10000 - 50000&#x20bd;</option>
+              <option value="middle">10000 - 50000&#x20bd;</option>
               <option value="low">до 10000&#x20bd;</option>
               <option value="high">от 50000&#x20bd;</option>
             </select></label>
@@ -279,10 +279,10 @@
       </div>
     </template>
     <script src="js/util.js"></script>
+    <script src="js/debounce.js"></script>
     <script src="js/pop-up.js"></script>
-    <script src="js/get-coords.js"></script>
+    <script src="js/coords.js"></script>
     <script src="js/backend.js"></script>
-    <script src="js/data.js"></script>
     <script src="js/card.js"></script>
     <script src="js/show-card.js"></script>
     <script src="js/pin.js"></script>
